tests/Tree/positive/test008.jvt

function loop() : *;
function main() : *;

function loop() : * {
  call[loop]()
}

function main() : * {
  add(br(le(2, 1)) {
    true: call[loop]()
    false: br(le(8, 7)) {
      true: call[loop]()
      false: 1
    }
  }, br(lt(0, 3)) {
    true: 1
    false: call[loop]()
  })
}
