tests/Tree/negative/test004.jvt
-- if on non-boolean

function main() : * {
  br(3) {
    true: 0
    false: 1
  }
}
